Chatbot/src/components/Chatbot/styles/Chatbot.css
.Chatbot {
    position: fixed;
    bottom: 30px;
    right: 30px;
    z-index: 1000;
    max-height: 600px;
    height: calc(100vh - 100px);
    width: 400px;
    box-shadow: 5px 5px 30px 0 rgba(0, 0, 0, 0.1);
    background-color: #fafafa;
    border-radius: 5px;
}

.Chatbot_DirectLink_Container {
    height: 100%;
    display: grid;
}

.Chatbot_DirectLink {
    margin: 100px auto auto;
    z-index: 50;
    height: 600px;
    width: 60vw;
    box-shadow: 5px 5px 30px 0 rgba(0, 0, 0, 0.1);
    background-color: #fafafa;
    border-radius: 5px;
}

.Head {
    background-color: #1890ff;
    color: white;
}

.ant-card-actions > li > span {
    cursor: move;
}

/* Smart phones (portrait and landscape) ----------- */
@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
    /* Styles */
    .Chatbot {
        bottom: 0;
        right: 0;
        z-index: 99999;
        height: 100%;
        width: 100%;
    }

    .Chatbot_DirectLink {
        bottom: 0;
        right: 0;
        z-index: 99999;
        height: 100%;
        width: 100%;
        position: fixed;
        background-color: #fafafa;
        border-radius: 0;
        margin: auto auto;
    }
}

/* All iPhones  ----------- */
@media only screen and (min-device-width: 320px) and (max-device-height: 896px) and (orientation: portrait) {
    /* Styles */
    /*noinspection ALL*/
    .Chatbot {
        bottom: 0;
        right: 0;
        z-index: 100000;
        height: 100%;
        width: 100%;
        max-height: fit-content;
        max-height: -webkit-fill-available;
    }

    .Chatbot_DirectLink {
        bottom: 0;
        right: 0;
        z-index: 10001;
        height: 100%;
        width: 100%;
        position: fixed;
        background-color: #fafafa;
        border-radius: 0;
        margin: auto auto;
    }
}

.Flow {
    height: calc(100% - 131px);
    width: 100%;
    display: flex;
    flex-flow: column;
    padding: 10px 20px 15px;
    overflow-x: hidden;
    overflow-y: auto;
    will-change: transform;
}

.Flow::-webkit-scrollbar {
    display: none;
}

.Flow p {
    font-size: 14px;
    font-weight: 400;
}

/*Animation */
.ZoomIn {
    animation-duration: 0.5s;
    animation-name: ZoomIn;
    transform-origin: bottom right;
}

@keyframes ZoomIn {
    from,
    20%,
    40%,
    60%,
    80%,
    to {
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
        opacity: 0;
        transform: scale3d(0, 0, 0);
    }

    to {
        opacity: 1;
        transform: scale3d(1, 1, 1);
    }
}

.ZoomOut {
    animation-duration: 0.5s;
    animation-name: ZoomOut;
    transform-origin: bottom right;
}

@keyframes ZoomOut {
    from,
    20%,
    40%,
    60%,
    80%,
    to {
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
        opacity: 0;
        transform: scale3d(1, 1, 1);
    }

    to {
        opacity: 1;
        transform: scale3d(0, 0, 0);
    }
}

@keyframes Animate {
    0% {
        opacity: 0;
        transform: translateX(-60px);
    }
}

.Animate {
    animation-duration: 0.5s;
    animation-fill-mode: both;
    animation-timing-function: ease-out;
    transform-origin: bottom right;
    animation-name: Animate;
}

@keyframes bounceIn {
    from,
    20%,
    40%,
    60%,
    80%,
    to {
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
        opacity: 0;
        transform: scale3d(0.3, 0.3, 0.3);
    }

    20% {
        transform: scale3d(1.1, 1.1, 1.1);
    }

    40% {
        transform: scale3d(0.9, 0.9, 0.9);
    }

    60% {
        opacity: 1;
        transform: scale3d(1.03, 1.03, 1.03);
    }

    80% {
        transform: scale3d(0.97, 0.97, 0.97);
    }

    to {
        opacity: 1;
        transform: scale3d(1, 1, 1);
    }
}

.bounceIn {
    animation-duration: 1s;
    animation-name: bounceIn;
}

#TheSearchBase_Chatbot input[type="color"], #TheSearchBase_Chatbot input[type="date"], #TheSearchBase_Chatbot input[type="datetime"], #TheSearchBase_Chatbot input[type="datetime-local"], #TheSearchBase_Chatbot input[type="email"], #TheSearchBase_Chatbot input[type="month"], #TheSearchBase_Chatbot input[type="number"], #TheSearchBase_Chatbot input[type="password"], #TheSearchBase_Chatbot input[type="search"], #TheSearchBase_Chatbot input[type="tel"], #TheSearchBase_Chatbot input[type="text"], #TheSearchBase_Chatbot input[type="time"], #TheSearchBase_Chatbot input[type="url"], #TheSearchBase_Chatbot input[type="week"] {
    font-size: 16px;
}

#TheSearchBase_Chatbot select:focus, #TheSearchBase_Chatbot textarea {
    font-size: 16px;
}

input {
    border-radius: 0 0 5px 5px;
}

input .ant-input-suffix > .ant-input-search-button {
    border-radius: 0 0 5px 0;
}

.ant-upload {
    width: 100%;
    border-radius: 0 0 5px 5px;
}

.ant-upload > button {
    width: 100%;
    border-radius: 0 0 5px 5px;
}

.ant-upload-list {
    position: relative;
    bottom: 70px;
    width: 96%;
    left: 10px;
}

.ant-progress-outer {
    display: inline-block;
    width: 100%;
    margin-right: 0;
    padding: 0 10px;
}

.ParentDots {
    color: #647384;
    display: flex;
}

@-webkit-keyframes indicator {
    0%, to {
        background: #9ba6b3;
        -webkit-transform: scale(1.3);
        transform: scale(1.3);
    }

    50% {
        background: #c6cdd4;
        -webkit-transform: scale(0.7);
        transform: scale(0.7);
    }
}

@keyframes indicator {
    0%, to {
        background: #9ba6b3;
        -webkit-transform: scale(1.3);
        transform: scale(1.3);
    }

    50% {
        background: #c6cdd4;
        -webkit-transform: scale(0.7);
        transform: scale(0.7);
    }
}

div.Dots {
    -webkit-animation: indicator infinite ease-in-out both 1.5s;
    animation: indicator infinite ease-in-out both 1.5s;
    -webkit-animation-delay: 0s;
    animation-delay: 0s;
    width: 7px;
    height: 7px;
    display: block;
    margin: 0 4px;
    border-radius: 7px;
}

div.Dots:first-child {
    -webkit-animation-delay: -.1875s;
    animation-delay: -0.1875s;
}

div.Dots:last-child {
    -webkit-animation-delay: .375s;
    animation-delay: 0.375s;
}

@keyframes bounceIn {
    from,
    20%,
    40%,
    60%,
    80%,
    to {
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
        opacity: 0;
        transform: scale3d(0.3, 0.3, 0.3);
    }

    20% {
        transform: scale3d(1.1, 1.1, 1.1);
    }

    40% {
        transform: scale3d(0.9, 0.9, 0.9);
    }

    60% {
        opacity: 1;
        transform: scale3d(1.03, 1.03, 1.03);
    }

    80% {
        transform: scale3d(0.97, 0.97, 0.97);
    }

    to {
        opacity: 1;
        transform: scale3d(1, 1, 1);
    }
}

.bounceIn {
    animation-duration: 1s;
    animation-name: bounceIn;
}

@keyframes fadeOut {
    from {
        opacity: 1;
    }

    to {
        opacity: 0;
    }
}

.fadeOut {
    animation-name: fadeOut;
    animation-duration: 1000ms;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.fadeIn {
    animation-name: fadeIn;
    animation-duration: 1000ms;
}

